2013-08-15  Daniel Bates  <dabates@apple.com>

        <https://webkit.org/b/119863> [iOS] Upstream WebCore/editing/ios

        Reviewed by David Kilzer.

        * WebCore.xcodeproj/project.pbxproj:
        * editing/ios/EditorIOS.mm: Added.
        (WebCore::Editor::newGeneralClipboard):
        (WebCore::Editor::showFontPanel):
        (WebCore::Editor::showStylesPanel):
        (WebCore::Editor::showColorPanel):
        (WebCore::Editor::setTextAlignmentForChangedBaseWritingDirection):
        (WebCore::Editor::insertParagraphSeparatorInQuotedContent):
        (WebCore::styleForSelectionStart):
        (WebCore::Editor::fontForSelection):
        (WebCore::Editor::fontAttributesForSelectionStart):
        (WebCore::Editor::removeUnchangeableStyles):

2013-08-15  Dirk Schulze  <krit@webkit.org>

        Implement CSS Image filter() function
        https://bugs.webkit.org/show_bug.cgi?id=119845

        Reviewed by Dean Jackson.

        The Filter Effects specification defines a new CSS Image function called
        filter(). This function takes another CSS Image as well as a filter function
        list as input and can be used by various CSS properties.

        Example:

            background-image: -webkit-filter(url(image.png), brightness(0.5))

        This patch implements the current definition of filter() based on other
        image generation classes like CSSCrossfadeValue.
        A new class called CSSFilterImageValue was added together with an
        image observer.

        The function is implemented prefixed and behind the compiler flag CSS_FILTERS.

        Tests: fast/filter-image/filter-image.html
               fast/filter-image/parse-filter-image.html

        * CMakeLists.txt: Added new files to build systems.
        * GNUmakefile.list.am:
        * Target.pri:
        * WebCore.vcxproj/WebCore.vcxproj:
        * WebCore.xcodeproj/project.pbxproj:
        * css/CSSAllInOne.cpp: