@@ -28,8 +28,6 @@
 #include "HTMLElementFactory.cpp"
 #include "HTMLEntityTable.cpp"
 #include "JSAbstractWorker.cpp"
-#include "JSArrayBuffer.cpp"
-#include "JSArrayBufferView.cpp"
 #include "JSAttr.cpp"
 #include "JSBarProp.cpp"
 #include "JSBeforeLoadEvent.cpp"
@@ -103,7 +101,6 @@
 #include "JSDatabaseSync.cpp"
 #include "JSDataTransferItem.cpp"
 #include "JSDataTransferItemList.cpp"
-#include "JSDataView.cpp"
 #include "JSDedicatedWorkerGlobalScope.cpp"
 #include "JSDeviceOrientationEvent.cpp"
 #include "JSDirectoryEntry.cpp"
@@ -164,8 +161,6 @@
 #include "JSFileWriter.cpp"
 #include "JSFileWriterCallback.cpp"
 #include "JSFileWriterSync.cpp"
-#include "JSFloat32Array.cpp"
-#include "JSFloat64Array.cpp"
 #include "JSFocusEvent.cpp"
 #if ENABLE(FONT_LOAD_EVENTS)
 #include "JSFontLoader.cpp"
@@ -264,9 +259,6 @@
 #include "JSImageData.cpp"
 #include "JSInjectedScriptHost.cpp"
 #include "JSInspectorFrontendHost.cpp"
-#include "JSInt16Array.cpp"
-#include "JSInt32Array.cpp"
-#include "JSInt8Array.cpp"
 #include "JSJavaScriptCallFrame.cpp"
 #include "JSKeyboardEvent.cpp"
 #include "JSLocation.cpp"
@@ -511,10 +503,6 @@
 #include "JSTouchList.cpp"
 #include "JSTransitionEvent.cpp"
 #include "JSTreeWalker.cpp"
-#include "JSUint16Array.cpp"
-#include "JSUint32Array.cpp"
-#include "JSUint8Array.cpp"
-#include "JSUint8ClampedArray.cpp"
 #include "JSUIEvent.cpp"
 #include "JSValidityState.cpp"
 #include "JSVoidCallback.cpp"
